kubernetes/apps/immich/immich/app/virtualservice.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.istio.io/virtualservice_v1.json
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: immich
  namespace: immich
spec:
  hosts:
    - immich.${SECRET_DOMAIN}
  gateways:
    - istio-ingress/external-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: immich-server.immich.svc.cluster.local
            port:
              number: 2283
